# yongchengapp

./: .gitignore  run.sh  runpull.sh  runpush.sh
client/: app.json  (+3 more)
server/: api_schema.json  gunicorn_config.py  pyproject.toml  uwsgi.ini
server/analyze/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
server/attendance/: admin.py  apps.py  models.py  scheduler.py  serializers.py  urls.py  views.py
server/authentication/: admin.py  apps.py  form.py  models.py  permissions.py  serializers.py  signals.py  urls.py  utils.py  views.py  viewset_permissions.py
server/banner/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
server/courses/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
server/finance/: apps.py
server/humanresources/: __init__.py  admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
server/news/: apps.py  models.py  serializers.py  urls.py  views.py
server/notifications/: admin.py  apps.py  models.py  serializers.py  urls.py  utils.py  views.py
server/reviews/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
server/schedule/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
server/server/: settings.py  urls.py
server/store/: apps.py
server/subscriptions/: apps.py  models.py  views.py
server/teachlog/: apps.py  urls.py
server/templates/: password_reset_email.html
server/tweets/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
server/venues/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
(+268 files in other folders)
