[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.4"
djangorestframework = "^3.15.1"
djangorestframework-simplejwt = "^5.3.1"
psycopg2 = "^2.9.9"
django-cors-headers = "^4.3.1"
pillow = "^10.3.0"
qrcode = "^7.4.2"
django-haystack = "^3.2.1"
pyproj = "^3.6.1"
wagtail = "^6.1.1"
djangocms-installer = "^2.0.0"
djangocms-admin-style = "^3.3.1"
django-treebeard = "^4.7.1"
django-sekizai = "^4.1.0"
django-filer = "^3.1.3"
easy-thumbnails = "^2.8.5"
django-cms = "^4.1.1"
gunicorn = "^22.0.0"
uwsgi = "^2.0.25.1"
apscheduler = "^3.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
